Fixed content overflowing by making section scrollable (#32)
* fixed content overflowing down the page by making each section scrollable

* new line

--- a/frontend/src/components/NotebookPanel.css
+++ b/frontend/src/components/NotebookPanel.css
@@ -12,6 +12,7 @@
   border-right-width: 4px;
   border-right-color: #D7CFBE;
   border-style: solid;
+  overflow-y: scroll;
 }
 
 .nb-divider {
