--- a/frontend/src/components/SearchPanel.css
+++ b/frontend/src/components/SearchPanel.css
@@ -1,6 +1,7 @@
 .list-container {
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
 }
 
 .section-body {
